--- a/index.html
+++ b/index.html
@@ -132,14 +132,23 @@
     <!-- Navigation/Header -->
     <nav class="w-full max-w-6xl mx-auto p-6 flex items-center justify-between mb-4">
         <div class="flex items-center gap-3">
-            <div class="w-10 h-10 rounded-xl bg-indigo-600 flex items-center justify-center shadow-lg shadow-indigo-500/30">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+            <!-- Custom Logo Matching Favicon -->
+            <div class="w-10 h-10 rounded-xl overflow-hidden shadow-lg shadow-indigo-500/30">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" class="w-full h-full">
+                    <rect width="100" height="100" rx="20" fill="#4f46e5"/>
+                    <path d="M30 30 L50 70 L70 30" stroke="white" stroke-width="8" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </div>
             <h1 class="text-3xl font-bold tracking-tight">WeeGen</h1>
         </div>
         <div class="flex items-center gap-4">
+            <!-- Contact Button -->
+            <a href="mailto:narotech@zohomail.in" class="p-2 rounded-lg static-panel hover:border-indigo-500 transition-colors" title="Contact Us">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-slate-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                </svg>
+            </a>
+            
             <!-- Theme Toggle -->
             <button onclick="toggleTheme()" class="p-2 rounded-lg static-panel hover:border-indigo-500 transition-colors" title="Toggle Theme">
                 <!-- Sun Icon (for Dark Mode) -->
@@ -152,7 +161,7 @@
                 </svg>
             </button>
             <div class="text-xs font-medium text-slate-400 border border-slate-700/50 px-3 py-1 rounded-full static-panel">
-                v4.0 Ultimate
+                v4.1 Ultimate
             </div>
         </div>
     </nav>
@@ -306,7 +315,7 @@
                 <div class="static-panel rounded-2xl p-6 sticky top-6">
                     <h3 class="text-lg font-bold mb-4">Generate</h3>
                     <p class="text-sm text-gray-500 mb-6">Create a standalone HTML file.</p>
-                    <button onclick="triggerSingleGeneration()" class="w-full bg-indigo-600 hover:bg-indigo-500 text-white font-bold py-4 rounded-xl shadow-lg shadow-indigo-500/20 flex items-center justify-center gap-2">
+                    <button onclick="triggerSingleGeneration()" class="w-full bg-indigo-600 hover:bg-indigo-500 text-white font-bold py-4 rounded-xl shadow-lg shadow-indigo-500/20 flex items-center justify-center gap-2 transition-colors">
                         GENERATE FILE
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" /></svg>
                     </button>
@@ -530,7 +539,8 @@
             const nameInput = document.getElementById('siteName');
             const iconInput = document.getElementById('iconUrl');
 
-            if(nameInput.value.trim() !== "") return;
+            // REMOVED CHECK: Always refresh details on fetch
+            // if(nameInput.value.trim() !== "") return;
 
             nameInput.placeholder = "Fetching details...";
             
